# Simple-Transfer-Example

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: rust.yml  rustler.yml
simple_transfer/transfer_app/: Cargo.toml
simple_transfer/transfer_app/src/: burn.rs  end_to_end_test.rs  errors.rs  eth.rs  evm.rs  forwarder.rs  main.rs  mint.rs  transfer.rs  user.rs  utils.rs  webserver.rs
simple_transfer/transfer_app/src/evm/: errors.rs  evm.rs  evm_calls.rs  mod.rs
simple_transfer/transfer_app/src/examples/: approve.rs  burn.rs  mint.rs  mod.rs  shared.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/examples/end_to_end/: burn.rs  mint.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/requests/: approve.rs  burn.rs  mint.rs  mod.rs  resource.rs  split.rs  transfer.rs
simple_transfer/transfer_app/src/tests/: approve.rs  end_to_end.rs  fixtures.rs  forwarder.rs  mint.rs  mod.rs  transfer.rs
simple_transfer/transfer_library/: Cargo.toml
simple_transfer/transfer_library/src/: lib.rs
simple_transfer/transfer_nif/: Cargo.toml
simple_transfer/transfer_nif/src/: lib.rs
simple_transfer/transfer_witness/: Cargo.toml
simple_transfer/transfer_witness/src/: lib.rs
