[package]
name = "transfer_app"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_docs = "warn"

[features]
default = ["arm/bonsai"]
gpu = ["arm/cuda"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }
transfer_witness = { path = "../transfer_witness" }
transfer_library = { path = "../transfer_library" }
arm = { git = "https://github.com/anoma/arm-risc0", tag = "v0.8.1", default-features = false, features = ["transaction",
    "groth16_prover",
] }
rand = "0.8"
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std",
    "unstable",
] }
hex = "0.4"
lazy_static = "1.5.0"
evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter", rev = "3b2277eede9fee20c92e86c005e67fcd0e13b46b" }
tokio = "1.47.1"
alloy = { version = "1.0.23", features = ["full"] }
eyre = "0.6.12"
k256 = { version = "0.13", features = ["serde"] }
sha3 = "0.10"
dotenv = "0.15"
bincode = "1.3.3"
futures = { version = "0.3.31", features = ["thread-pool"] }
rocket = { version = "0.5", features = ["json"] }
reqwest = { version = "0.12", features = ["blocking"] }
[build-dependencies]
mint = "0.5.9"
