[package]
name = "transfer_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "transfer_nif"
crate-type = ["cdylib"]

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", branch = "xuyang/simple_transfer_app_v3", default-features = true, features = ["transaction", "groth16_prover", "bonsai", "nif"] }
# transfer_logic_circuit = { path = "../transfer_logic_circuit" }
transfer_library = { path = "../transfer_library", features = ["nif"] }
transfer_witness = { path = "../transfer_witness", features = ["nif"] }
rand = "0.9.2"
tokio = "1.47.1"
alloy = { version = "1.0.23", features = ["full"] }

# nif specific
rustler = "0.36.2"
serde = "1.0"
bincode = "1.3.3"